--- a/estilo.css
+++ b/estilo.css
@@ -57,7 +57,8 @@ li {
     background-color:rgb(92, 12, 241);
     border-radius: 10px;
     margin-bottom: 15px;
-    padding-left: 250px;
+    padding-left: 220px;
+    font-size: 30px;
 
 }
 
@@ -80,6 +81,7 @@ li a:hover {
     height: 50px;
     font-size: 25px;
     border-radius: 10px;
+    border: none;
 }
 
 .final:nth-child(1){
